feature/update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /.vs/WebApiTest/v17/.suo
 /obj/Debug/net9.0/WebApiTest.AssemblyInfoInputs.cache
 /obj/Debug/net9.0/WebApiTest.AssemblyInfo.cs
+/.github/workflows/main_eazy-marcus.yml
